--- a/web/index.html
+++ b/web/index.html
@@ -55,5 +55,25 @@
       });
     });
   </script>
+
+  <script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.1.0/firebase-app.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
+
+  // Your web app's Firebase configuration
+  const firebaseConfig = {
+    apiKey: "AIzaSyBE0tVw4vK5__ZGOg2gCUewqZs8QzgPE_I",
+    authDomain: "forum-d280d.firebaseapp.com",
+    projectId: "forum-d280d",
+    storageBucket: "forum-d280d.appspot.com",
+    messagingSenderId: "561349684925",
+    appId: "1:561349684925:web:1103ad4f961784021c51d4"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+</script>
 </body>
 </html>
